fixed navbar overflow

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -35,15 +35,16 @@ body {
   width: 100%;
   list-style: none;
   background: black;
+  overflow-y: hidden;
 
  
 }
 .navi a {
-  font-size: 2.2em;
-  word-wrap: break-word;
+  font-size: 1.8em;
+  
   color: white;
   float: left; 
-  width: 16.6666666%;
+  width: 16.666666666667%;
   box-sizing: border-box;
   font-family: 'Cabin', sans-serif;
   text-align: center;
